--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@
     /* margin: 0 auto; */
     padding-top: 50px;
     text-align: left;
-    width: 500px;
+    width: 661px;
     line-height: 30px;
   }
   .info h1 {
@@ -79,7 +79,7 @@
     border-radius: 5px;
     height: 35px;
      vertical-align: middle;
-
+     box-shadow: 0 1px 1px 1px grey;
   }
   .contact-button img {
     width: 30px;
@@ -130,9 +130,10 @@
   }
   .conception-content {
     padding-left: 50px;
-    width: 700px;
+    width: 661px;
+    padding-bottom: 50px;
 }
-.conception-section p {
+  .conception-section p {
     padding-top: 30px;
     font-family: 'Nanum Gothic', sans-serif;
     letter-spacing: 1.2px; 
@@ -170,4 +171,142 @@
 .boxes {
     background-color: rgb(11, 185, 243);
 }
+.projects-section h2{
+  letter-spacing: 9px;
+  font-family: 'Brandon Grotesque light', sans-serif;
+  font-size: 33px;
+  padding-bottom: 50px;
+}
+.projects-section p {
+  width: 661px;
+  line-height: 30px;
+  letter-spacing: 1px;
+  font-family: 'Nanum Gothic', sans-serif;
+  text-align: left;
+  padding-bottom: 50px;
+}
+.project-spans {
+  width: 661px;
+}
+.outils {
+  display: inline-block;
+  font-size: 12px;
+  font-family: 'Brandon Grotesque light', sans-serif;
+}
+.project-spans div {
+  display: inline-block;
+  margin-right: 20px;
+  background: #FFFFFF;
+  border: 1px;
+  padding: 7px;
+  font-family: 'Brandon Grotesque bold', sans-serif;
+  box-shadow: 0px 2px 4px #00000029;
+  text-align: left;
+  padding-bottom: 15px;
+  height: 34px;
+  border-radius: 3px;
+}
+.project-spans {
+  font-size: 12px;
+  padding-bottom: 15px;
+}
+.project-spans2 div {
+  display: inline-block;
+  margin-right: 20px;
+  background: #FFFFFF;
+  border: 1px;
+  font-family: 'Brandon Grotesque bold', sans-serif;
+  box-shadow: 0px 2px 4px #00000029;
+  text-align: left;
+  padding: 7px;
+  height: 34px;
+  border-radius: 3px;
+}
+.project-spans2 {
+  font-size: 12px;
+  padding-bottom: 50px;
+}
+.images-section {
+  width: 1200px;
+  margin: 0 auto;
+  /* height: 440px; */
+}
+.bruxelles {
+  box-shadow: 0px 4px 6px #00000029;
+  border-radius: 0px 0px 6px 6px;
+  display: inline-block;
+  border: 1px;
+  width: 1200px;
+  background-color: #FFFFFF;
+  height: 440px;
+}
+.bruxelles-img {
+  display: inline-block;
+  width: 711px;
+  padding-bottom: 100px;
+}
+.bruxelles-content {
+  display: inline-block;
+  width: 276px;
+}
+.bruxelles-content h5 {
+  letter-spacing: 1.4px;
+  color: #262626;
+  margin-bottom: 20px;
+  font-family: 'Brandon Grotesque bold', sans-serif;
+  font-size: 14px;
+}
+.bruxelles-content p {
+  font-size: 15px;
+  letter-spacing: 1px;
+  font-family: 'Nanum Gothic', sans-serif;
+  line-height: 15px;
+  /* width: 100px; */
+}
+.brx-span {
+  font-size: 15px;
+  padding-bottom: 25px;
+}
 
+
+.design-boxes {
+  display: inline-block;
+  background-color:  #F7F7F7;
+  height: 461px;
+  width: 1200px;
+}
+.design-box{
+  display: inline-block;
+  height: 461px;
+  width: 320px;
+  box-shadow: 0px 4px 6px #00000029;
+  border-radius: 0px 0px 6px 6px;
+  background-color: #FFFFFF;
+}
+.design-img img{
+  width: 320px;
+  padding-bottom: 20px;
+}
+.design-box h6 {
+  font-family: 'Brandon Grotesque light', sans-serif;
+  font-size: 13px;
+}
+span {
+  padding-bottom: 50px;
+}
+/* .right-arrow {
+  margin-top: 50px;
+  border-radius: 50%;
+  background-color: #0865DE;
+  width: 20px;
+  height: 20px;
+  display: inline-block;
+  vertical-align: middle;
+} */
+.arrow-text {
+  color: #0865DE;
+  font-family: 'Brandon Grotesque bold', sans-serif;
+  font-size: 12px;
+  display: inline-block;
+  vertical-align: bottom;
+}
